jumpy mobile ux fix

--- a/src/components/about.scss
+++ b/src/components/about.scss
@@ -1,5 +1,10 @@
 @import '../variables.scss';
 
+.mobile-vh-fix {
+    border: 2px solid fuchsia;
+    height: viewportHeight;
+}
+
 .about_grid {
     width: calc(100% - 400px);
     height: calc(100vh - 24px);
