--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -47,7 +47,7 @@
         img{
             width: calc(100% - 30px);
             margin: 15px;
-            border-radius:5px;
+            // border-radius:5px;
         }
     }
     .words {
